# ai-image-serving

./: .gitignore  pyproject.toml  stabled.py  start_tf_server.sh
aiimageserving/: generate_images.py  prompt_server.py  prompt_servrer.py  stable_diffusion_client.py  util.py
aiimageserving/static/: prompt.html
test/: test_stable_diffusion_client.py
