[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-image-serving"
version = "0.0.1"
dependencies = [
    "click",
    "tensorflow",
    "keras_cv",
    "matplotlib",
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "jinja2",
    "python-multipart"
]

[project.scripts]
generate-images = "aiimageserving.generate_images:cli"

